--- a/classical/java/MonteCarlo/pom.xml
+++ b/classical/java/MonteCarlo/pom.xml
@@ -4,6 +4,14 @@
   <artifactId>MonteCarlo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <dependencies>
+    <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
+</dependency>
+    </dependencies>    
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -17,7 +25,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.0.0</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
         </configuration>
