--- a/classical/java/webapp/MonteCarlo/pom.xml
+++ b/classical/java/webapp/MonteCarlo/pom.xml
@@ -3,6 +3,15 @@
   <groupId>MonteCarlo</groupId>
   <artifactId>MonteCarlo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
+ <dependencies>
+    <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.1.0</version>
+    <scope>provided</scope>
+</dependency>
+    </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -14,6 +23,13 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+<plugin>
+        <artifactId>maven-war-plugin</artifactId>
+   <version>3.0.0</version>
+      <configuration>
+          <warSourceDirectory>WebContent</warSourceDirectory>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
